<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RelativeLayoutStyle">

    <RadioGroup
        android:id="@+id/options_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comparison_1" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comparison_2" />

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comparison_3" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/product_A_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/options_radio_group"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_product_A"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="@string/product_A" />

        <Spinner
            android:id="@+id/product_A_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_B_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_A_container"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_product_B"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="@string/product_B" />

        <Spinner
            android:id="@+id/product_B_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_B_container"
        android:layout_centerInParent="true"
        android:text="@string/compare" />

    <RelativeLayout
        android:id="@+id/comparison_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_button"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/product_A_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                tools:text="Product A" />

            <TextView
                android:id="@+id/product_B_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                tools:text="Product B" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/simplified_nutrients_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header_container"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    </RelativeLayout>

</RelativeLayout>